--- a/Deliverables/D4.2 - Updated Intro + Related Work.md
+++ b/Deliverables/D4.2 - Updated Intro + Related Work.md
@@ -15,14 +15,16 @@ Junior level developers gain knowledge being involved with projects, however the
 This paper seeks to provide an increased understanding of the average development path of junior level developers, by considering how the amount of time a developer has been contributing to open-source projects correlates to the rate at which their contributions are accepted. This addresses the problems by setting a baseline for the development of open-source contributors. This can highlight which developers need additional experience, encouraging them to seek out open-source projects to contribute to.
 
 
-RQ 1: How many pull requests have been created on a particular Github project?
+- RQ 1: How many pull requests have been created on a particular Github project?
 This will give us an idea of how many contributions are being made by various users on Github. From here, we will choose a few users at random to look further into their github history.
-RQ 2: Refering to specific users, how many pull requests of theirs have been accepted?
+
+- RQ 2: Refering to specific users, how many pull requests of theirs have been accepted?
 This will give us data on how many pull requests a specific user has made on a project and how many of those have been accepted. This then tells us how many contributions were actually deemed significant to a project and we will compare the number of significant contributions between various users.
 
 Our goal is to provide a better understanding of how the overall amount of time a developer has been contributing to open-source software relates to the number of contributions made by that developer, as well as how many of those contributions are considered to be “useful” enough to be accepted. This study will look at a number of pull requests made on open-source projects on GitHub. For each request, the experience of the user behind it (measured as the amount of time elapsed since the first GitHub contribution made by the user), the number of contributions made by that user, and whether the pull was merged will all be considered.
 
-This research will give developers a frame of reference for how their own development compares to that of others in their field. This would be useful both to the developers themselves and to any professionals considering hiring them, as it would allow them to compare their own experience to the experience of the average developer. This would show which candidates have a history of high or low performance in open-source contributions.## 2. Related Works
+This research will give developers a frame of reference for how their own development compares to that of others in their field. This would be useful both to the developers themselves and to any professionals considering hiring them, as it would allow them to compare their own experience to the experience of the average developer. This would show which candidates have a history of high or low performance in open-source contributions.
+
 ## 2. Related Works
 This section presents the existing research in open source software communities. There are different approaches by researchers and organizations to understand the factors affecting pull requests and code quality.
 
